 20-Oct-2019  V0.85 Update type, coverage and configuration for latest IHM dictioanry update
 23-Oct-2019  V0.86 Add nesting property to objects with unit cardinality,
                    don't propagate exact-match/suggest search contexts to full-text
 25-Oct-2019  V0.87 Address a couple of anomalous sequence accession code issues and sync up mock repos
 26-Oct-2019  V0.88 Address anomalous non-polymer reference sequence records.
  2-Nov-2019  V0.89 Add bird specific citation handling methods and rerun
 23-Nov-2019  V0.90 Move pipeline to py38
  4-Dec-2019  V0.91 Add type specific entity collections (branch entity-type-division)
  5-Dec-2019  V0.92 Update search contexts for repository holdings.
  8-Dec-2019  V0.93 Partially handle odd cases of missing entity_poly category and adjust enumeration for nonpolymer instances features
                    Adjust error reporting in getProtSecStructFeatures(), tweak mandatory items for fiber diffraction, handle boundary
                    counts for cases with no macromolecules
 10-Dec-2019  V0.94  Adding aggregation of gene names, related annotation lineage, fixed miscellaneous counting issues
 14-Dec-2019  V0.941 Reorganize repository holdings collections
 15-Dec-2019  V0.942 Suppress SIFTS with primary data loading
 16-Dec-2019  V0.943 Extend normalizeCsvToList() to handle more inconsisent cases.
 16-Dec-2019  V0.944 Add workflow module and tests to facilitate Luigi integration.
 23-Dec-2019  V0.945 Add consolidated EC processing and disable auto search context filters
 04-Jan-2020  V0.946 Add support for rcsb_polymer_entity.rcsb_enzyme_class_combined_depth, set single process cache management on loading
 08-Jan-2020  V0.947 Add checks for missing entity gene names
 10-Jan-2020  V0.949 Update dependencides for rcsb.utils.struct
 20-Jan-2020  V0.950 pre-beta-rev-v1 - reorganizing assembly and feature categories, standardize on provenance_source, update enums