@@ -1517,21 +1517,21 @@ document_helper_configuration:
               VERSION: 5.2.0
         pdbx_core:
             - NAME: pdbx_core_entry
-              VERSION: 8.0.0
+              VERSION: 8.0.1
             - NAME: pdbx_core_assembly
               VERSION: 8.0.0
             - NAME: pdbx_core_polymer_entity
-              VERSION: 8.0.0
+              VERSION: 8.0.1
             - NAME: pdbx_core_nonpolymer_entity
-              VERSION: 8.0.0
+              VERSION: 8.0.1
             - NAME: pdbx_core_branched_entity
-              VERSION: 8.0.0
+              VERSION: 8.0.1
             - NAME: pdbx_core_polymer_entity_instance
-              VERSION: 8.0.0
+              VERSION: 8.0.1
             - NAME: pdbx_core_nonpolymer_entity_instance
-              VERSION: 8.0.0
+              VERSION: 8.0.1
             - NAME: pdbx_core_branched_entity_instance
-              VERSION: 8.0.0
+              VERSION: 8.0.1
         bird:
             - NAME: bird
               VERSION: 5.2.0
